# kika-obsidian-mcp

./: .env.example  LICENSE  README.md  SETUP_GUIDE.md  bases.py  claude_desktop_config.example.json  codex.mcp.example.toml  install.sh  install_for_codex.sh  obsidian_client.py  pyproject.toml  requirements.txt  server.py  test_server.py
.github/workflows/: ci.yml
docs/: bases-examples.md  common-workflows.md  share-and-submit.md
docs/templates/: codex-work-log.md  project-session-log.md  weekly-review.md  work-log.md
scripts/: daily_status_report.py
skills/obsidian-vault-workflow/: SKILL.md
skills/release-note-captain/: SKILL.md
skills/release-note-captain/templates/: release-note.md
