[project]
name = "obsidian-mcp-codex"
version = "0.1.0"
description = "Local-first MCP server for Obsidian vaults, built for Codex, Claude Desktop, and filesystem-based markdown workflows."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Nica Loren" }
]
dependencies = [
  "mcp[cli]",
  "pyyaml",
  "python-frontmatter"
]
keywords = [
  "mcp",
  "model-context-protocol",
  "obsidian",
  "obsidian-mcp",
  "codex",
  "claude-desktop",
  "markdown",
  "local-first",
  "knowledge-base"
]

[project.urls]
Homepage = "https://github.com/aka-kika/obsidian-codex-mcp"
Repository = "https://github.com/aka-kika/obsidian-codex-mcp"
