[project]
name = "kika-obsidian-mcp"
version = "0.3.0"
description = "Kika's local-first MCP server for Obsidian vaults — direct filesystem access, works without the Obsidian app. For Claude Code, Codex, Grok, and other MCP clients."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Nica Loren" }
]
dependencies = [
  "mcp[cli]",
  "pyyaml",
  "python-frontmatter"
]
keywords = [
  "mcp",
  "model-context-protocol",
  "obsidian",
  "obsidian-mcp",
  "obsidian-bases",
  "bases",
  "codex",
  "claude-desktop",
  "markdown",
  "local-first",
  "knowledge-base"
]

[project.urls]
Homepage = "https://github.com/aka-kika/kika-obsidian-mcp"
Repository = "https://github.com/aka-kika/kika-obsidian-mcp"
