[project]
name = "kika-obsidian-mcp"
version = "0.3.0"
description = "Kika's local-first MCP server for Obsidian vaults — direct filesystem access, works without the Obsidian app. Works with any MCP client (Claude Code, Claude Desktop, Cursor, Cline, Codex, Grok). Includes schema-validated Obsidian Bases (.base) support."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "Nica Loren" }
]
dependencies = [
  "mcp[cli]",
  "pyyaml",
  "python-frontmatter"
]
keywords = [
  "mcp",
  "model-context-protocol",
  "obsidian",
  "obsidian-mcp",
  "obsidian-bases",
  "bases",
  "claude-code",
  "claude-desktop",
  "cursor",
  "codex",
  "markdown",
  "local-first",
  "knowledge-base"
]

[project.urls]
Homepage = "https://github.com/aka-kika/kika-obsidian-mcp"
Repository = "https://github.com/aka-kika/kika-obsidian-mcp"
